<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.freelance.ahmed.tourguideapp.Activities.DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_details_Linear"
        android:orientation="vertical"
        tools:context="com.freelance.ahmed.tourguideapp.Activities.DetailsActivity">

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_detail_linear_height">

            <ImageView
                android:id="@+id/posterimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/alphablack"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="@dimen/smalldp"
                android:paddingLeft="@dimen/meddp"
                android:paddingRight="@dimen/smalldp"
                android:paddingTop="@dimen/smalldp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/eighteensp"
                tools:text="@string/placeholder" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/part1view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/meddp"
            android:layout_marginLeft="@dimen/meddp"
            android:layout_marginRight="@dimen/meddp"
            android:layout_marginTop="@dimen/meddp"
            android:background="@drawable/backgroundcorners"
            android:orientation="vertical"
            android:paddingBottom="@dimen/smalldp"
            android:paddingLeft="@dimen/largedp"
            android:paddingRight="@dimen/meddp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smalldp"
                android:layout_marginTop="@dimen/meddp"
                android:fontFamily="monospace"
                android:text="@string/ow"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/eighteensp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/meddp"
                android:fontFamily="monospace"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medsp"
                tools:text="@string/placeholder" />
            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/onedp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/meddp"
                android:background="@android:color/darker_gray"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smalldp"
                android:layout_marginTop="@dimen/meddp"
                android:fontFamily="monospace"
                android:text="@string/interested"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/eighteensp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/location_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/meddp"
                android:layout_marginTop="@dimen/smalldp"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/smalldp"
                android:text="@string/loca"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
